

plugins {
	id 'java'
	id 'io.franzbecker.gradle-lombok' version '5.0.0'
	id 'org.openjfx.javafxplugin' version '0.0.13'
	id 'application'
	//id 'org.beryx.runtime' version '1.2.0' apply false
}


wrapper {
    gradleVersion = '6.1'
}


group = 'RSPSi Editor'
version = '1.16.1'

allprojects {
    repositories {
        mavenCentral()
        mavenLocal()
        maven { url "https://repo1.maven.org/maven2/" }
        maven { url "https://repo.adobe.com/nexus/content/repositories/public/"}
    }

}

subprojects {

	apply plugin: 'java'
	apply plugin: 'io.franzbecker.gradle-lombok'
	//apply plugin: 'org.openjfx.javafxplugin'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8


    dependencies {

    // https://mvnrepository.com/artifact/com.google.code.gson/gson
	    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
   		// https://mvnrepository.com/artifact/org.checkerframework/checker-qual
		implementation group: 'org.checkerframework', name: 'checker-qual', version: '2.9.0'

   		implementation group: 'com.google.guava', name: 'guava', version: '28.0-jre'
        implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'

    }


	lombok { // optional: values below are the defaults
        version = "1.18.20"
        sha256 = "39f3922deb679b1852af519eb227157ef2dd0a21eec3542c8ce1b45f2df39742"
	}

    compileJava {
        options.fork = true
        options.incremental = true
        options.forkOptions.jvmArgs += [
            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
        ]
    }

	javafx {
	    version = "19"
	    modules = [ 'javafx.fxml', 'javafx.controls', 'javafx.media', 'javafx.swing']
	}


}

// Configure the root project to run the Editor application
application {
    mainClass = 'com.rspsi.LauncherWindow'
}

// Make sure the Editor module is built before running
run {
    dependsOn ':Editor:build'
    classpath = project(':Editor').sourceSets.main.runtimeClasspath
    jvmArgs = [
        '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
        '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
        '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
        '--add-opens=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
        '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
        '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
    ]
}
